# boolean_calculator

./: .gitignore  CMakeLists.txt  README.md
src/: analysis.h  analysis.hpp  base_input_manager.cpp  base_input_manager.hpp  base_output_manager.hpp  classificator.cpp  classificator.hpp  cli.cpp  cli.hpp  cli_input_manager.cpp  cli_input_manager.hpp  cli_output_manager.cpp  cli_output_manager.hpp  main.cpp  rpe.cpp  rpe.h  rpe.hpp  stack.h  stack.hpp  types_values.hpp
win/: Resource.h  win.cpp  win.h  win.rc  win.vcxproj  win.vcxproj.filters
